# robot_fd

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  rviz_robot_arm.rviz
launch/: fault_detection.launch.py  gazebo.launch.py  test_fault_detection.launch.py  view_robot.launch.py
model/: robot_arm_urdf.xacro  ros2_control.xacro
model/urdf/: robot_arm_urdf.urdf
scripts/: anomaly_detector.py  data_recorder.py  ekf_node.py  fault_injector.py  live_plotter.py  plot_residuals.py  sine_wave_commander.py  train_autoencoder.py
